# Spine-Cocos2D-X

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  build_iosmac.sh  build_linux.sh
cocos/: Android.mk  Makefile  cmake_install.cmake
cocos/scripting/lua-bindings/: Makefile  cmake_install.cmake
cocos/scripting/lua-bindings/proj.ios_mac/cocos2d_lua_bindings.xcodeproj/: project.pbxproj
cocos/scripting/lua-bindings/proj.ios_mac/cocos2d_lua_bindings.xcodeproj/xcuserdata/guanghui.xcuserdatad/xcschemes/: libluacocos2d Mac.xcscheme  libluacocos2d iOS.xcscheme  xcschememanagement.plist
prebuilt/android/: Android.mk
